--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Sappho -- Fiction'
 - !lcsh 'Historical fiction'
 - !lcc 'PS'
+- GITenberg
 title: Sappho's Journal
 url: http://www.gutenberg.org/ebooks/39467
